sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: ';' expected but 'if' found.
    } if(count % 2 == 1){
      ^